-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.7.2
-
None
-
Symbian
-
73db39d2600e1e451a97a49c9ef5e964ff5642c8
Item has a MouseArea which invokes a native window when onPressed signal is received. The native window consumes all mouse events after it has been invoked. In such case the MouseArea does not receive any mouse events until the native window has been dismissed and the MouseArea is clicked again.
The problem is that when MouseArea is clicked after native window dismissal, only released signal is sent (no pressed at all), i.e. it is still in pressed state even though it got a new mouse press from platform.
Solution proposal: If MouseArea is in pressed state and gets a new pressed from platform, it resets it self to state where it would be in the first mouse press.
For Gerrit Dashboard: QTBUG-19904 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
2357,6 | Cancel mousearea pressed state when window is deactivated | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |