Cancel mousearea pressed state when window is deactivated

Change-Id: I1cc21c338576a2ac3b1e8e282e8e4de3bc63759a
Task-number:QTBUG-19904
Reviewed-on: http://codereview.qt.nokia.com/2357
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>